2006-01-12  Tom Tromey  <tromey@redhat.com>

	* java/net/InetAddress.java (DEFAULT_CACHE_SIZE): Removed.
	(DEFAULT_CACHE_PERIOD, DEFAULT_CACHE_PURGE_PCT): Likewise.
	(cache_size, cache_period, cache_purge_pct, cache): Likewise.
	(static initializer): Removed cache code.
	(checkCacheFor, addToCache): Removed.
	(getAllByName): Removed cache code.
	(lookup_time): Removed.
	(InetAddress): Updated.

2006-01-12  Chris Burdess  <dog@gnu.org>

	* gnu/xml/dom/DomDocument.java,
	  gnu/xml/dom/DomElement.java,
	  gnu/xml/dom/DomNode.java,
	  gnu/xml/stream/XMLParser.java,
	  gnu/xml/transform/Bindings.java,
	  gnu/xml/transform/ElementAvailableFunction.java,
	  gnu/xml/transform/ElementNode.java,
	  gnu/xml/transform/FunctionAvailableFunction.java,
	  gnu/xml/transform/NamespaceProxy.java,
	  gnu/xml/transform/StreamSerializer.java,
	  gnu/xml/transform/Stylesheet.java,
	  gnu/xml/transform/TransformerImpl.java,
	  gnu/xml/xpath/Selector.java: Implement isEqualNode correctly for
	  document and element nodes; correct coalescing semantics when parsing;
	  attribute-sets can only refer to top-level variables and parameters;
	  fix namespace retrieval during element-available and
	  function-available functions; implement xsl:fallback for extension
	  elements; tokenize whitespace correctly during whitespace stripping;
	  correct following and previous node axes selectors.

2006-01-12  Roman Kennke  <kennke@aicas.com>

	* java/util/Hashtable.java
	(KeyEnumerator.nextElement): Added null check to avoid NPE.
	(ValueEnumerator.nextElement): Added null check to avoid NPE.

2006-01-12  Lillian Angel  <langel@redhat.com>

	* javax/swing/text/GapContent.java
	(UndoInsertString): Changed name of class to InsertUndo to match the JDK.

2006-01-12  Mark Wielaard  <mark@klomp.org>

	* vm/reference/gnu/java/net/VMPlainSocketImpl.java (connect):
	Throw UnknowHostException when name could not be resolved.

2006-01-12  Jeroen Frijters  <jeroen@frijters.net>

	* java/net/URL.java